--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -17,7 +17,7 @@
                             <th><p class="text-center">STT</p></th>
                             <th><p class="text-center">Ngày</p></th>
                             <th><input type="text" name="name" id="" class="form-control text-center" placeholder="Tên khách hàng"></th>
-                            <th><input type="text" name="loai" id="" class="form-control text-center" placeholder="Loại Gas"></th>
+                            <th><input type="text" name="loai" id="" class="form-control text-center" placeholder="Loại"></th>
                             <th><input type="number" name="soluong" id="" class="form-control text-center" placeholder="Số Lượng"></th>
                             <th><input type="number" name="gia" id="" class="form-control text-center" placeholder="Thành tiền"></th>
                             <th><input type="text" name="giao" id="" class="form-control text-center" placeholder="Người giao"></th>
@@ -44,7 +44,7 @@
                         <td class="text-capitalize"><%= users[i].name %> </td>
                         <td class="text-uppercase text-center"><%= users[i].loai %></td>
                         <td class="text-center"><%= users[i].soluong %></td>
-                        <td class="text-right"><%= (users[i].gia) %></td>
+                        <td class="text-right"><%= (users[i].gia).toLocaleString("fi-FI")+" đ" %></td>
                         <td class="text-capitalize text-center"><%= users[i].giao %></td>
                         <td><a href="/users/xem/<%= users[i]._id %> " >Xem</a></td>
                         <td><a href="/users/sua/<%= users[i]._id %> ">
