--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,25 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CH Gas Minh Thông</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@600&family=Roboto+Slab:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/bootstrap.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <script type="text/javascript">
-        function xoahaykhong(tinnhan){
-            if(window.confirm(tinnhan)==true){
-                return true;
-            }
-            return false;
-        }
-    </script>
 
-</head>
-<body>
-    <div class="top">
+    
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark mtren">
             <div class="container fontgoo">
                 <a class="navbar-brand logo" href="/">Minh Thông</a>
@@ -32,16 +12,16 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="/">Home </a>
                         </li>
-                        <!-- <li class="nav-item">
-                            <a class="nav-link" href="#">Thông báo</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/users">Nhập liệu</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tra cứu</a>
                             <div class="dropdown-menu" aria-labelledby="dropdownId">
-                                <a class="dropdown-item" href="#">Tổng kết </a>
-                                <a class="dropdown-item" href="/users">Nhiên liệu</a>
+                                <a class="dropdown-item" href="/users/searchday">Báo cáo ngày </a>
+                                <a class="dropdown-item" href="/users">Báo cáo tháng</a>
                             </div>
-                        </li> -->
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link btn btn-outline-danger nutsignup" href="#">Đăng nhập</a>
                         </li>
