--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,33 +1,45 @@
-<%- include ('layouts/header.ejs') %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CH Gas Vinh Quang</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@600&family=Roboto+Slab:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4">
+<div class="top">
+  <%- include ('layouts/header.ejs') %>
 
-                  <a href="/users"><img class="bd-placeholder-img rounded-circle" width="140"  height="140" src="images/xetai.jpg" ></a>
-                  
-                  <h2>Bán hàng</h2>
-                  <p>Thông tin đặt hàng, bao gồm : thông tin chi tiết về khách hàng, ngày đặt hàng , người giao, số lượng...</p>
-                  <p><a class="btn btn-secondary" href="/users" role="button">Xem &raquo;</a></p>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-lg-4">
-                    <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="images/fuel.jpg" >
-                  <h2>Thống kê</h2>
-                  <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-                  <p><a class="btn btn-secondary" href="#" role="button">Xem &raquo;</a></p>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-lg-4">
-                    <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="images/thongke.jpg" >
-                  <h2>Báo cáo</h2>
-                  <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                  <p><a class="btn btn-secondary" href="#" role="button">Xem &raquo;    </a></p>
-                </div><!-- /.col-lg-4 -->
-              </div><!-- /.row -->
-        </div>
-    </div>
-    
-    <script src="js/jquery-3.2.1.slim.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-4">
+
+            <a href="/users"><img class="bd-placeholder-img rounded-circle" width="140"  height="140" src="images/xetai.jpg" ></a>
+            
+            <h2>Bán hàng</h2>
+            <p>Thông tin đặt hàng, bao gồm : thông tin chi tiết về khách hàng, ngày đặt hàng , người giao, số lượng...</p>
+            <p><a class="btn btn-secondary" href="/users" role="button">Xem &raquo;</a></p>
+          </div><!-- /.col-lg-4 -->
+          <div class="col-lg-4">
+              <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="images/fuel.jpg" >
+            <h2>Thống kê</h2>
+            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            <p><a class="btn btn-secondary" href="#" role="button">Xem &raquo;</a></p>
+          </div><!-- /.col-lg-4 -->
+          <div class="col-lg-4">
+              <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="images/thongke.jpg" >
+            <h2>Báo cáo</h2>
+            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p><a class="btn btn-secondary" href="#" role="button">Xem &raquo;    </a></p>
+          </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+  </div>
+
+</div>
+  <%- include ('layouts/footer.ejs') %>
 </body>
 </html>
