--- a/views/users/chitiet.ejs
+++ b/views/users/chitiet.ejs
@@ -34,7 +34,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><%= (user.month).getHours()+":"+(user.month).getMinutes()+"_"+(user.month).getDate()+"/"+(user.month).getMonth()+"/"+(user.month).getFullYear() %> </td>
+                            <td><%= (user.month).getDate()+"/"+(user.month).getMonth()+"/"+(user.month).getFullYear() %> </td>
                             <td><%= user.name %> </td>
                             <td><%= user.loai %> </td>
                             <td><%= user.soluong %> </td>
