--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,8 @@
-*{margin: 0px;padding: 0px;}
+*{
+    margin: 0px;
+    padding: 0px;
+    /* background: burlywood; */
+}
 
 .top{
     background-color: burlywood;
