--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -64,6 +64,7 @@
 
                         </tr>
                     <% for(var i = users.length - 1;i >=0 ;i--){ %>
+                        <% if (i === users.length-51) {break;} %>
                     <tr>
                         
                         <td><%= users.length-i  %></td>
