--- a/views/users/daxoa.ejs
+++ b/views/users/daxoa.ejs
@@ -38,6 +38,7 @@
                 <tbody>
 
                     <% for(var i = users.length - 1;i >=0 ;i--){ %>
+                        <% if (i === users.length-101) {break;} %>
                     <tr>
                         
                         <td><%= users.length-i  %></td>
