--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -45,7 +45,7 @@
                             <th><input type="text" name="name" id="" class="form-control text-center" placeholder="Tên khách hàng"></th>
                             <th><input type="text" name="loai" id="" class="form-control text-center" placeholder="Loại Gas"></th>
                             <th><input type="number" name="soluong" id="" class="form-control text-center" placeholder="Số Lượng"></th>
-                            <th><input type="number" name="gia" id="" class="form-control text-center" pattern="^\d*(\.\d{0,2})?$" placeholder="Thành tiền"></th>
+                            <th><input type="number" name="gia" id="" class="form-control text-center"  placeholder="Thành tiền"></th>
                             <th><input type="text" name="giao" id="" class="form-control text-center" placeholder="Người giao"></th>
                             <th><p class="text-center"></p></th>
                             <th><button type="submit" class="btn btn-primary col-auto">Tạo</button></th>
