--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -18,7 +18,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tra cứu</a>
                             <div class="dropdown-menu" aria-labelledby="dropdownId">
-                                <a class="dropdown-item" href="/users/searchday">Báo cáo ngày </a>
+                                <!-- <a class="dropdown-item" href="/users/searchday">Báo cáo ngày </a> -->
                                 <a class="dropdown-item" href="/users">Báo cáo tháng</a>
                             </div>
                         </li>
